# MTP

./: .gitignore  .summary.md  PROGRESS.md  README.md  TODO.md  pyproject.toml
docs/: architecture.md  differentiation_analysis.md  premap_kernel_consumer_schema.md  premap_longrun_audit_summary.md
scripts/: analyze_awq_decode_breakdown.py  analyze_descriptor_order_cache_replay.py  analyze_descriptor_reorder_attribution.py  analyze_prefetch_lead_time.py  analyze_prefill_working_set.py  analyze_wna16_kernel_cost.py  benchmark_expert_transfer.py  build_evidence_manifest.py  build_future_wna16_assignment_variant_evidence_bundle.py  build_future_wna16_typed_slot_payloadless_useful_ab_comparison.py  build_layer_prior_tile_order.py  build_mtp_router_alignment.py  build_payloadless_live_config_decision_gate.py  build_premap_payload_cache_full_fetch_decision_gate.py  build_premap_payload_cache_inprocess_native_online_contract.py  build_premap_payload_cache_inprocess_native_session_online_contract.py  build_premap_payload_cache_issue_plan_gate.py  build_premap_payload_cache_manager_production_ab_preflight.py  build_premap_payload_cache_manager_useful_work_ab_gate.py  build_premap_payload_cache_online_inside_graph_producer_boundary_contract.py  build_premap_payload_cache_producer_state_stream_online_contract.py  build_premap_payload_cache_stream_earlier_issue_feasibility.py  build_premap_payload_cache_stream_full_fetch_decision_gate.py  build_premap_payload_cache_stream_producer_ab_bundle.py  build_premap_payload_cache_stream_producer_production_ab_report.py  (+180 more)
(+712 files in other folders)
